@@ -1,10 +1,11 @@
 version 1.5
-	* Shorten the header shown when running Cobertura (Thanks
+	* Shortened the header shown when running Cobertura (Thanks
 	  to Jarkko Viinamäki).
 	* Fixed the merge task (Thanks to Mark Sinke).
-	* Fix a bug where the class list in the HTML reports did
+	* Fixed a bug where the class list in the HTML reports did
 	  not show multiple classes with the same name, but in
 	  different packages.
+	* Don't save the data file twice after instrumenting.
 
 version 1.4
 	* Fixed a bug that sometimes resulted in a
